Commit from GitHub Actions (Compile HTML)

--- a/prac01/prac.html
+++ b/prac01/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="1.-&#1053;&#1072;&#1080;&#1074;&#1085;&#1072;&#1103;-&#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.-&#1043;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103;-&#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.">1. &#1053;&#1072;&#1080;&#1074;&#1085;&#1072;&#1103; &#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;. &#1043;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103; &#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.<a class="anchor-link" href="#1.-&#1053;&#1072;&#1080;&#1074;&#1085;&#1072;&#1103;-&#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.-&#1043;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103;-&#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.">&#182;</a></h1>
+<h1 id="1.-%D0%9D%D0%B0%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D0%BE%D1%8F%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.-%D0%93%D0%B5%D0%BE%D0%BC%D0%B5%D1%82%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D0%BE%D1%8F%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.">1. &#1053;&#1072;&#1080;&#1074;&#1085;&#1072;&#1103; &#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;. &#1043;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103; &#1074;&#1077;&#1088;&#1086;&#1103;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.<a class="anchor-link" href="#1.-%D0%9D%D0%B0%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D0%BE%D1%8F%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.-%D0%93%D0%B5%D0%BE%D0%BC%D0%B5%D1%82%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D0%BE%D1%8F%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13111,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<h2 id="%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
 <li><a href="#chapter3">Домашнее задание</a></li>
@@ -13124,7 +13117,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13153,7 +13146,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13237,7 +13230,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1047;-(&#1074;&#1089;&#1077;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1087;&#1086;-1-&#1073;&#1072;&#1083;&#1083;&#1091;)-">&#1044;&#1047; (&#1074;&#1089;&#1077; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080; &#1087;&#1086; 1 &#1073;&#1072;&#1083;&#1083;&#1091;) <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-(&#1074;&#1089;&#1077;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1087;&#1086;-1-&#1073;&#1072;&#1083;&#1083;&#1091;)-">&#182;</a></h2>
+<h2 id="%D0%94%D0%97-(%D0%B2%D1%81%D0%B5-%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BF%D0%BE-1-%D0%B1%D0%B0%D0%BB%D0%BB%D1%83)-">&#1044;&#1047; (&#1074;&#1089;&#1077; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080; &#1087;&#1086; 1 &#1073;&#1072;&#1083;&#1083;&#1091;) <a class="anchor" id="chapter3" /><a class="anchor-link" href="#%D0%94%D0%97-(%D0%B2%D1%81%D0%B5-%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BF%D0%BE-1-%D0%B1%D0%B0%D0%BB%D0%BB%D1%83)-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13292,7 +13285,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+<h2 id="%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13400,7 +13393,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1052;&#1086;&#1090;&#1080;&#1074;&#1072;&#1094;&#1080;&#1103;">&#1052;&#1086;&#1090;&#1080;&#1074;&#1072;&#1094;&#1080;&#1103;<a class="anchor-link" href="#&#1052;&#1086;&#1090;&#1080;&#1074;&#1072;&#1094;&#1080;&#1103;">&#182;</a></h2>
+<h2 id="%D0%9C%D0%BE%D1%82%D0%B8%D0%B2%D0%B0%D1%86%D0%B8%D1%8F">&#1052;&#1086;&#1090;&#1080;&#1074;&#1072;&#1094;&#1080;&#1103;<a class="anchor-link" href="#%D0%9C%D0%BE%D1%82%D0%B8%D0%B2%D0%B0%D1%86%D0%B8%D1%8F">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13417,7 +13410,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;-(&#1082;&#1091;&#1088;&#1089;-&#1089;&#1086;-Stepik)">&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099; (&#1082;&#1091;&#1088;&#1089; &#1089;&#1086; Stepik)<a class="anchor-link" href="#&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;-(&#1082;&#1091;&#1088;&#1089;-&#1089;&#1086;-Stepik)">&#182;</a></h3><p>Чтобы получить доступ к видео, нужно создать аккаунт на stepik.org, а потом вступить в <a href="https://stepik.org/course/3089">курс "Теория вероятности" от CSC</a></p>
+<h3 id="%D0%92%D0%B8%D0%B4%D0%B5%D0%BE%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B-(%D0%BA%D1%83%D1%80%D1%81-%D1%81%D0%BE-Stepik)">&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099; (&#1082;&#1091;&#1088;&#1089; &#1089;&#1086; Stepik)<a class="anchor-link" href="#%D0%92%D0%B8%D0%B4%D0%B5%D0%BE%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B-(%D0%BA%D1%83%D1%80%D1%81-%D1%81%D0%BE-Stepik)">&#182;</a></h3><p>Чтобы получить доступ к видео, нужно создать аккаунт на stepik.org, а потом вступить в <a href="https://stepik.org/course/3089">курс "Теория вероятности" от CSC</a></p>
 <p><a href="https://stepik.org/lesson/48661/step/1">Основы комбинаторики</a></p>
 <p><a href="https://stepik.org/lesson/48659/step/3">Введение в вероятность</a></p>
 <p><a href="https://stepik.org/lesson/48660/step/1">Вероятностные пространства</a></p>
@@ -13428,7 +13421,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-(&#1082;&#1091;&#1088;&#1089;-&#1063;&#1077;&#1088;&#1085;&#1086;&#1074;&#1086;&#1081;)">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; (&#1082;&#1091;&#1088;&#1089; &#1063;&#1077;&#1088;&#1085;&#1086;&#1074;&#1086;&#1081;)<a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-(&#1082;&#1091;&#1088;&#1089;-&#1063;&#1077;&#1088;&#1085;&#1086;&#1074;&#1086;&#1081;)">&#182;</a></h3><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node3.html#SECTION000210">Основы комбинаторики</a></p>
+<h3 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-(%D0%BA%D1%83%D1%80%D1%81-%D0%A7%D0%B5%D1%80%D0%BD%D0%BE%D0%B2%D0%BE%D0%B9)">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; (&#1082;&#1091;&#1088;&#1089; &#1063;&#1077;&#1088;&#1085;&#1086;&#1074;&#1086;&#1081;)<a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-(%D0%BA%D1%83%D1%80%D1%81-%D0%A7%D0%B5%D1%80%D0%BD%D0%BE%D0%B2%D0%BE%D0%B9)">&#182;</a></h3><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node3.html#SECTION000210">Основы комбинаторики</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node4.html#SECTION000220">Элементарная теория вероятностей</a></p>
 
 </div>
@@ -13437,7 +13430,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;,">&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;,<a class="anchor-link" href="#&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;,">&#182;</a></h2><p><a href="https://stepik.org/lesson/48665/step/1">Схема Бернулли</a></p>
+<h2 id="%D0%92%D0%B8%D0%B4%D0%B5%D0%BE%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B,">&#1042;&#1080;&#1076;&#1077;&#1086;&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;,<a class="anchor-link" href="#%D0%92%D0%B8%D0%B4%D0%B5%D0%BE%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B,">&#182;</a></h2><p><a href="https://stepik.org/lesson/48665/step/1">Схема Бернулли</a></p>
 <p><a href="https://stepik.org/lesson/48671/step/1">Теорема Пуассона</a></p>
 
 </div>
@@ -13446,7 +13439,7 @@ $$P_n = n!$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;<a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node17.html">Схема Бернулли</a></p>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;<a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node17.html">Схема Бернулли</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node21.html">Теорема Пуассона</a></p>
 
 </div>
