--- a/prac02/prac.html
+++ b/prac02/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="2.-&#1055;&#1086;&#1083;&#1091;&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;,-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;,-$\sigma$-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;">2. &#1055;&#1086;&#1083;&#1091;&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;, &#1082;&#1086;&#1083;&#1100;&#1094;&#1072;, $\sigma$-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;<a class="anchor-link" href="#2.-&#1055;&#1086;&#1083;&#1091;&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;,-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;,-$\sigma$-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;">&#182;</a></h1>
+<h1 id="2.-%D0%9F%D0%BE%D0%BB%D1%83%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0,-%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0,-$%5Csigma$-%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0">2. &#1055;&#1086;&#1083;&#1091;&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;, &#1082;&#1086;&#1083;&#1100;&#1094;&#1072;, $\sigma$-&#1082;&#1086;&#1083;&#1100;&#1094;&#1072;<a class="anchor-link" href="#2.-%D0%9F%D0%BE%D0%BB%D1%83%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0,-%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0,-$%5Csigma$-%D0%BA%D0%BE%D0%BB%D1%8C%D1%86%D0%B0">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13111,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<h2 id="%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
 <li><a href="#chapter3">Домашнее задание</a></li>
@@ -13124,7 +13117,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13203,7 +13196,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13278,7 +13271,7 @@ $$\overline{A} = \bigcap_{k \in \mathcal{N}} \bigcup_{i \ge k}A_i$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1076;&#1086;&#1084;-(&#1082;&#1072;&#1078;&#1076;&#1072;&#1103;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1072;-&#1087;&#1086;-1&#1073;)-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1076;&#1086;&#1084; (&#1082;&#1072;&#1078;&#1076;&#1072;&#1103; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072; &#1087;&#1086; 1&#1073;) <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1076;&#1086;&#1084;-(&#1082;&#1072;&#1078;&#1076;&#1072;&#1103;-&#1079;&#1072;&#1076;&#1072;&#1095;&#1072;-&#1087;&#1086;-1&#1073;)-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%B4%D0%BE%D0%BC-(%D0%BA%D0%B0%D0%B6%D0%B4%D0%B0%D1%8F-%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B0-%D0%BF%D0%BE-1%D0%B1)-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1076;&#1086;&#1084; (&#1082;&#1072;&#1078;&#1076;&#1072;&#1103; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072; &#1087;&#1086; 1&#1073;) <a class="anchor" id="chapter3" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%B4%D0%BE%D0%BC-(%D0%BA%D0%B0%D0%B6%D0%B4%D0%B0%D1%8F-%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B0-%D0%BF%D0%BE-1%D0%B1)-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13336,7 +13329,7 @@ $$\overline{A} = \bigcap_{k \in \mathcal{N}} \bigcup_{i \ge k}A_i$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+<h2 id="%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13377,7 +13370,7 @@ $$R = \big\{\bigsqcup_{i=1}^n A_i |A_i \in S\big\}$$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&#1055;&#1086;&#1083;&#1077;&#1079;&#1085;&#1099;&#1077;-&#1089;&#1089;&#1099;&#1083;&#1082;&#1080;">&#1055;&#1086;&#1083;&#1077;&#1079;&#1085;&#1099;&#1077; &#1089;&#1089;&#1099;&#1083;&#1082;&#1080;<a class="anchor-link" href="#&#1055;&#1086;&#1083;&#1077;&#1079;&#1085;&#1099;&#1077;-&#1089;&#1089;&#1099;&#1083;&#1082;&#1080;">&#182;</a></h1><ul>
+<h1 id="%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5-%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8">&#1055;&#1086;&#1083;&#1077;&#1079;&#1085;&#1099;&#1077; &#1089;&#1089;&#1099;&#1083;&#1082;&#1080;<a class="anchor-link" href="#%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5-%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8">&#182;</a></h1><ul>
 <li><a href="http://math.phys.msu.ru/data/172/lec02a.pdf">Конспект МГУ</a></li>
 <li><a href="http://mathhelpplanet.com/static.php?p=polukoltsa-opredeleniye-aksiomy-primery">mathhelpnet</a></li>
 </ul>
