--- a/prac08/prac.html
+++ b/prac08/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="8.-&#1044;&#1080;&#1089;&#1087;&#1077;&#1088;&#1089;&#1080;&#1103;.-&#1050;&#1086;&#1074;&#1072;&#1088;&#1080;&#1072;&#1094;&#1080;&#1103;.-&#1050;&#1086;&#1088;&#1088;&#1077;&#1083;&#1103;&#1094;&#1080;&#1103;.">8. &#1044;&#1080;&#1089;&#1087;&#1077;&#1088;&#1089;&#1080;&#1103;. &#1050;&#1086;&#1074;&#1072;&#1088;&#1080;&#1072;&#1094;&#1080;&#1103;. &#1050;&#1086;&#1088;&#1088;&#1077;&#1083;&#1103;&#1094;&#1080;&#1103;.<a class="anchor-link" href="#8.-&#1044;&#1080;&#1089;&#1087;&#1077;&#1088;&#1089;&#1080;&#1103;.-&#1050;&#1086;&#1074;&#1072;&#1088;&#1080;&#1072;&#1094;&#1080;&#1103;.-&#1050;&#1086;&#1088;&#1088;&#1077;&#1083;&#1103;&#1094;&#1080;&#1103;.">&#182;</a></h1>
+<h1 id="8.-%D0%94%D0%B8%D1%81%D0%BF%D0%B5%D1%80%D1%81%D0%B8%D1%8F.-%D0%9A%D0%BE%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D1%86%D0%B8%D1%8F.-%D0%9A%D0%BE%D1%80%D1%80%D0%B5%D0%BB%D1%8F%D1%86%D0%B8%D1%8F.">8. &#1044;&#1080;&#1089;&#1087;&#1077;&#1088;&#1089;&#1080;&#1103;. &#1050;&#1086;&#1074;&#1072;&#1088;&#1080;&#1072;&#1094;&#1080;&#1103;. &#1050;&#1086;&#1088;&#1088;&#1077;&#1083;&#1103;&#1094;&#1080;&#1103;.<a class="anchor-link" href="#8.-%D0%94%D0%B8%D1%81%D0%BF%D0%B5%D1%80%D1%81%D0%B8%D1%8F.-%D0%9A%D0%BE%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D1%86%D0%B8%D1%8F.-%D0%9A%D0%BE%D1%80%D1%80%D0%B5%D0%BB%D1%8F%D1%86%D0%B8%D1%8F.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13111,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<h2 id="%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
 <li><a href="#chapter3">Домашнее задание</a></li>
@@ -13124,7 +13117,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13157,7 +13150,7 @@ $$cor(\xi, \mu) = \frac{cov(\xi, \mu)}{\mathbb{D}[\xi]\mathbb{D}[\mu]}$$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13259,7 +13252,7 @@ $$cor(\xi, \mu) = \frac{cov(\xi, \mu)}{\mathbb{D}[\xi]\mathbb{D}[\mu]}$$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1047;-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-">&#182;</a></h2>
+<h2 id="%D0%94%D0%97-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#%D0%94%D0%97-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13340,7 +13333,7 @@ $$cor(\xi, \mu) = \frac{cov(\xi, \mu)}{\mathbb{D}[\xi]\mathbb{D}[\mu]}$$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+<h2 id="%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13399,7 +13392,7 @@ $corr(a,c) = corr(b,c) = 0.9$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1086;&#1087;.-&#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;">&#1044;&#1086;&#1087;. &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;<a class="anchor-link" href="#&#1044;&#1086;&#1087;.-&#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node48.html#SECTION0001110">Ковариация</a></p>
+<h2 id="%D0%94%D0%BE%D0%BF.-%D0%9C%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B">&#1044;&#1086;&#1087;. &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;<a class="anchor-link" href="#%D0%94%D0%BE%D0%BF.-%D0%9C%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node48.html#SECTION0001110">Ковариация</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node49.html#SECTION0001120">Корреляция</a></p>
 
 </div>
