--- a/prac09/prac.html
+++ b/prac09/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="9.-&#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1077;-&#1094;&#1077;&#1087;&#1080;.-&#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1081;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1081;-&#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1089;.">9. &#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1077; &#1094;&#1077;&#1087;&#1080;. &#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1081; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1081; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1089;.<a class="anchor-link" href="#9.-&#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1077;-&#1094;&#1077;&#1087;&#1080;.-&#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1081;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1081;-&#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1089;.">&#182;</a></h1>
+<h1 id="9.-%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B5-%D1%86%D0%B5%D0%BF%D0%B8.-%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9-%D1%81%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D1%8B%D0%B9-%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81.">9. &#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1077; &#1094;&#1077;&#1087;&#1080;. &#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1089;&#1082;&#1080;&#1081; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1081; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1089;.<a class="anchor-link" href="#9.-%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B5-%D1%86%D0%B5%D0%BF%D0%B8.-%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9-%D1%81%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D1%8B%D0%B9-%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13111,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;<a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;<a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13136,7 +13129,7 @@ $$P(\xi_{n+1}=x_{n+1}|\xi_0=x_0, \xi_1=x_1, \ldots, \xi_n=x_n) = P(\xi_{n+1}=x_{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;.-(&#1052;&#1086;&#1078;&#1085;&#1086;-&#1076;&#1086;&#1082;&#1072;&#1079;&#1072;&#1090;&#1100;-&#1087;&#1086;-&#1080;&#1085;&#1076;&#1091;&#1082;&#1094;&#1080;&#1080;-ref)">&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;. (&#1052;&#1086;&#1078;&#1085;&#1086; &#1076;&#1086;&#1082;&#1072;&#1079;&#1072;&#1090;&#1100; &#1087;&#1086; &#1080;&#1085;&#1076;&#1091;&#1082;&#1094;&#1080;&#1080; <a href="https://stepik.org/lesson/254734/step/9?unit=234942">ref</a>)<a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;.-(&#1052;&#1086;&#1078;&#1085;&#1086;-&#1076;&#1086;&#1082;&#1072;&#1079;&#1072;&#1090;&#1100;-&#1087;&#1086;-&#1080;&#1085;&#1076;&#1091;&#1082;&#1094;&#1080;&#1080;-ref)">&#182;</a></h3><p>Марковскую цепь также можно задать через след выражение и оно эквивалентно определению выше
+<h3 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B5%D0%BC%D0%B0.-(%D0%9C%D0%BE%D0%B6%D0%BD%D0%BE-%D0%B4%D0%BE%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C-%D0%BF%D0%BE-%D0%B8%D0%BD%D0%B4%D1%83%D0%BA%D1%86%D0%B8%D0%B8-ref)">&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;. (&#1052;&#1086;&#1078;&#1085;&#1086; &#1076;&#1086;&#1082;&#1072;&#1079;&#1072;&#1090;&#1100; &#1087;&#1086; &#1080;&#1085;&#1076;&#1091;&#1082;&#1094;&#1080;&#1080; <a href="https://stepik.org/lesson/254734/step/9?unit=234942">ref</a>)<a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B5%D0%BC%D0%B0.-(%D0%9C%D0%BE%D0%B6%D0%BD%D0%BE-%D0%B4%D0%BE%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C-%D0%BF%D0%BE-%D0%B8%D0%BD%D0%B4%D1%83%D0%BA%D1%86%D0%B8%D0%B8-ref)">&#182;</a></h3><p>Марковскую цепь также можно задать через след выражение и оно эквивалентно определению выше
 $P(\xi_0 = x_0, \xi_1 = x_1,\ldots, \xi_n = x_n) = P(\xi_0=x_0)P_1(x_1, x_2)\ldots P_n(x_{n-1}, x_n)$</p>
 
 </div>
@@ -13145,7 +13138,7 @@ $P(\xi_0 = x_0, \xi_1 = x_1,\ldots, \xi_n = x_n) = P(\xi_0=x_0)P_1(x_1, x_2)\ldo
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1054;&#1076;&#1085;&#1086;&#1088;&#1086;&#1076;&#1085;&#1099;&#1077;-&#1094;&#1077;&#1087;&#1080;-&#1084;&#1072;&#1088;&#1082;&#1086;&#1074;&#1072;">&#1054;&#1076;&#1085;&#1086;&#1088;&#1086;&#1076;&#1085;&#1099;&#1077; &#1094;&#1077;&#1087;&#1080; &#1084;&#1072;&#1088;&#1082;&#1086;&#1074;&#1072;<a class="anchor-link" href="#&#1054;&#1076;&#1085;&#1086;&#1088;&#1086;&#1076;&#1085;&#1099;&#1077;-&#1094;&#1077;&#1087;&#1080;-&#1084;&#1072;&#1088;&#1082;&#1086;&#1074;&#1072;">&#182;</a></h3><p>Марковская цепь является однородной, если вероятность перехода из состояния на шаге $n$ в состояние на шаге $m$ зависит только от $n-m$</p>
+<h3 id="%D0%9E%D0%B4%D0%BD%D0%BE%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B5-%D1%86%D0%B5%D0%BF%D0%B8-%D0%BC%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D0%B0">&#1054;&#1076;&#1085;&#1086;&#1088;&#1086;&#1076;&#1085;&#1099;&#1077; &#1094;&#1077;&#1087;&#1080; &#1084;&#1072;&#1088;&#1082;&#1086;&#1074;&#1072;<a class="anchor-link" href="#%D0%9E%D0%B4%D0%BD%D0%BE%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B5-%D1%86%D0%B5%D0%BF%D0%B8-%D0%BC%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D0%B0">&#182;</a></h3><p>Марковская цепь является однородной, если вероятность перехода из состояния на шаге $n$ в состояние на шаге $m$ зависит только от $n-m$</p>
 <p>$P_{n, n+1}(x,y) = P(x,y) = T_{x,y}$ - элемент матрицы перехода</p>
 
 </div>
@@ -13154,7 +13147,7 @@ $P(\xi_0 = x_0, \xi_1 = x_1,\ldots, \xi_n = x_n) = P(\xi_0=x_0)P_1(x_1, x_2)\ldo
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1057;&#1090;&#1072;&#1094;&#1080;&#1086;&#1085;&#1072;&#1088;&#1085;&#1086;&#1077;-&#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1077;">&#1057;&#1090;&#1072;&#1094;&#1080;&#1086;&#1085;&#1072;&#1088;&#1085;&#1086;&#1077; &#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1090;&#1072;&#1094;&#1080;&#1086;&#1085;&#1072;&#1088;&#1085;&#1086;&#1077;-&#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1077;">&#182;</a></h3><p>$\pi^*$ называется стационарным, если для любого начального распределения $\pi$:
+<h3 id="%D0%A1%D1%82%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D1%80%D0%BD%D0%BE%D0%B5-%D1%80%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5">&#1057;&#1090;&#1072;&#1094;&#1080;&#1086;&#1085;&#1072;&#1088;&#1085;&#1086;&#1077; &#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D1%82%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D1%80%D0%BD%D0%BE%D0%B5-%D1%80%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5">&#182;</a></h3><p>$\pi^*$ называется стационарным, если для любого начального распределения $\pi$:
 $$\lim_{n\to \infty} \pi * T^n = \pi^*$$</p>
 
 </div>
@@ -13163,7 +13156,7 @@ $$\lim_{n\to \infty} \pi * T^n = \pi^*$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1042;&#1086;&#1079;&#1074;&#1088;&#1072;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1086;&#1089;&#1090;&#1072;&#1103;&#1085;&#1080;&#1103;">&#1042;&#1086;&#1079;&#1074;&#1088;&#1072;&#1090;&#1085;&#1099;&#1077; &#1089;&#1086;&#1089;&#1090;&#1072;&#1103;&#1085;&#1080;&#1103;<a class="anchor-link" href="#&#1042;&#1086;&#1079;&#1074;&#1088;&#1072;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1086;&#1089;&#1090;&#1072;&#1103;&#1085;&#1080;&#1103;">&#182;</a></h3><p>$f_a(n) = P(\xi_n = a, \xi_{n-1} \neq a, \ldots, \xi_{1} \neq a|\xi_{0} = a)$ - вероятность возврата</p>
+<h3 id="%D0%92%D0%BE%D0%B7%D0%B2%D1%80%D0%B0%D1%82%D0%BD%D1%8B%D0%B5-%D1%81%D0%BE%D1%81%D1%82%D0%B0%D1%8F%D0%BD%D0%B8%D1%8F">&#1042;&#1086;&#1079;&#1074;&#1088;&#1072;&#1090;&#1085;&#1099;&#1077; &#1089;&#1086;&#1089;&#1090;&#1072;&#1103;&#1085;&#1080;&#1103;<a class="anchor-link" href="#%D0%92%D0%BE%D0%B7%D0%B2%D1%80%D0%B0%D1%82%D0%BD%D1%8B%D0%B5-%D1%81%D0%BE%D1%81%D1%82%D0%B0%D1%8F%D0%BD%D0%B8%D1%8F">&#182;</a></h3><p>$f_a(n) = P(\xi_n = a, \xi_{n-1} \neq a, \ldots, \xi_{1} \neq a|\xi_{0} = a)$ - вероятность возврата</p>
 <ul>
 <li>Если $\sum_{n=1}^{\infty}f_a(n)=1$, то $a$ - возвратное</li>
 <li>Если $\sum_{n=1}^{\infty}f_a(n)&lt;1$, то $a$ - невозвратное</li>
@@ -13175,7 +13168,7 @@ $$\lim_{n\to \infty} \pi * T^n = \pi^*$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091;<a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091;<a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13228,7 +13221,7 @@ $$T = \begin{bmatrix}
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&#1044;&#1086;&#1084;&#1072;">&#1044;&#1086;&#1084;&#1072;<a class="anchor-link" href="#&#1044;&#1086;&#1084;&#1072;">&#182;</a></h1>
+<h1 id="%D0%94%D0%BE%D0%BC%D0%B0">&#1044;&#1086;&#1084;&#1072;<a class="anchor-link" href="#%D0%94%D0%BE%D0%BC%D0%B0">&#182;</a></h1>
 </div>
 </div>
 </div>
