--- a/prac10/prac.html
+++ b/prac10/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="10.-&#1053;&#1077;&#1087;&#1088;&#1077;&#1088;&#1099;&#1074;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.-&#1055;&#1083;&#1086;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.">10. &#1053;&#1077;&#1087;&#1088;&#1077;&#1088;&#1099;&#1074;&#1085;&#1099;&#1077; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077; &#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;. &#1055;&#1083;&#1086;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.<a class="anchor-link" href="#10.-&#1053;&#1077;&#1087;&#1088;&#1077;&#1088;&#1099;&#1074;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.-&#1055;&#1083;&#1086;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.">&#182;</a></h1>
+<h1 id="10.-%D0%9D%D0%B5%D0%BF%D1%80%D0%B5%D1%80%D1%8B%D0%B2%D0%BD%D1%8B%D0%B5-%D1%81%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D1%8B%D0%B5-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B8%D0%BD%D1%8B.-%D0%9F%D0%BB%D0%BE%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.">10. &#1053;&#1077;&#1087;&#1088;&#1077;&#1088;&#1099;&#1074;&#1085;&#1099;&#1077; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077; &#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;. &#1055;&#1083;&#1086;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;.<a class="anchor-link" href="#10.-%D0%9D%D0%B5%D0%BF%D1%80%D0%B5%D1%80%D1%8B%D0%B2%D0%BD%D1%8B%D0%B5-%D1%81%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D1%8B%D0%B5-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B8%D0%BD%D1%8B.-%D0%9F%D0%BB%D0%BE%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13127,7 +13120,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<h2 id="%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
 <li><a href="#chapter3">Домашнее задание</a></li>
@@ -13140,7 +13133,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13260,7 +13253,7 @@ $$F_{\xi}(b) - F_{\xi}(a) = \int_{a}^{b}\rho_{\xi}(x)dx$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13295,7 +13288,7 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1047;-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-">&#182;</a></h2>
+<h2 id="%D0%94%D0%97-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#%D0%94%D0%97-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13334,14 +13327,14 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+<h2 id="%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#182;</a></h2>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1086;&#1087;.-&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;">&#1044;&#1086;&#1087;. &#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;<a class="anchor-link" href="#&#1044;&#1086;&#1087;.-&#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node23.html#SECTION000710">Случайные величины</a></p>
+<h2 id="%D0%94%D0%BE%D0%BF.-%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B">&#1044;&#1086;&#1087;. &#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083;&#1099;<a class="anchor-link" href="#%D0%94%D0%BE%D0%BF.-%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D1%8B">&#182;</a></h2><p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node23.html#SECTION000710">Случайные величины</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node24.html#SECTION000720">Распределения случайных величин</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node25.html#SECTION000730">Функция распределения</a></p>
 <p><a href="https://nsu.ru/mmf/tvims/chernova/tv/lec/node27.html#SECTION000750">Примеры непрерывных распределений</a></p>
@@ -13352,7 +13345,7 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1042;&#1080;&#1076;&#1077;&#1086;">&#1042;&#1080;&#1076;&#1077;&#1086;<a class="anchor-link" href="#&#1042;&#1080;&#1076;&#1077;&#1086;">&#182;</a></h3>
+<h3 id="%D0%92%D0%B8%D0%B4%D0%B5%D0%BE">&#1042;&#1080;&#1076;&#1077;&#1086;<a class="anchor-link" href="#%D0%92%D0%B8%D0%B4%D0%B5%D0%BE">&#182;</a></h3>
 </div>
 </div>
 </div>
