--- a/prac14/prac.html
+++ b/prac14/prac.html
@@ -13048,10 +13048,8 @@ div#notebook {
   }
 }
 </style>
-
-
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -13075,11 +13073,6 @@ div#notebook {
                     linebreaks: { 
                     automatic: true 
                     }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
                 }
             });
         
@@ -13096,14 +13089,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="14.-&#1059;&#1089;&#1083;&#1086;&#1074;&#1085;&#1086;&#1077;-&#1084;&#1072;&#1090;&#1077;&#1084;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1086;&#1077;-&#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.">14. &#1059;&#1089;&#1083;&#1086;&#1074;&#1085;&#1086;&#1077; &#1084;&#1072;&#1090;&#1077;&#1084;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1086;&#1077; &#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.<a class="anchor-link" href="#14.-&#1059;&#1089;&#1083;&#1086;&#1074;&#1085;&#1086;&#1077;-&#1084;&#1072;&#1090;&#1077;&#1084;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1086;&#1077;-&#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.">&#182;</a></h1>
+<h1 id="14.-%D0%A3%D1%81%D0%BB%D0%BE%D0%B2%D0%BD%D0%BE%D0%B5-%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5-%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5.">14. &#1059;&#1089;&#1083;&#1086;&#1074;&#1085;&#1086;&#1077; &#1084;&#1072;&#1090;&#1077;&#1084;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1086;&#1077; &#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.<a class="anchor-link" href="#14.-%D0%A3%D1%81%D0%BB%D0%BE%D0%B2%D0%BD%D0%BE%D0%B5-%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5-%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5.">&#182;</a></h1>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src='data/image.png' width=400/></p>
+<p><img src='https://github.com/mathmechterver/terver2021/blob/main/prac14/data/image.png?raw=1' width=400/></p>
 
 </div>
 </div>
@@ -13111,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<h2 id="%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#%D0%A1%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
 <li><a href="#chapter3">Домашнее задание</a></li>
@@ -13124,14 +13117,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+<h2 id="%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#%D0%A2%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-">&#182;</a></h2>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Матожидание строится аналогично стандартному, <strong>но</strong> условное матожидание - это <strong>функция</strong> от условния.</p>
+<p>Матожидание строится аналогично стандартному, <strong>но</strong> условное матожидание - это <strong>функция</strong> от условия.</p>
 $$\mathbb{E}(\xi|\eta)(y) = \sum xP(\xi=x|\eta=y)dx$$$$\mathbb{E}(\xi|\eta)(y) = \int_{-\infty}^{\infty}x\rho_{\xi|\eta}(x|y)dx$$<p>Для разбиения $H = (H_1, H_2, H_3)$</p>
 $$\mathbb{E}(\xi|H) = \left\{
     \begin{array}{ccc}
@@ -13145,7 +13138,7 @@ $$\mathbb{E}(\xi|H) = \left\{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+<h2 id="%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8-%D0%BD%D0%B0-%D0%BF%D0%B0%D1%80%D1%83-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13224,7 +13217,16 @@ $$\rho_{\xi,\eta}(x,y) =\left\{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1086;&#1084;&#1072;&#1096;&#1082;&#1072;-">&#1044;&#1086;&#1084;&#1072;&#1096;&#1082;&#1072; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1086;&#1084;&#1072;&#1096;&#1082;&#1072;-">&#182;</a></h2>
+<p><strong>5.</strong> Пусть дано $n$ независимых одинаково распределенных случайных величин $X_i$.</p>
+<p>Правда ли, что выполняется следующее утверждение? $$E(X_j|\sum_{i=1}^nX_i)=\frac1n \sum_{i=1}^nX_i$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="%D0%94%D0%BE%D0%BC%D0%B0%D1%88%D0%BA%D0%B0-">&#1044;&#1086;&#1084;&#1072;&#1096;&#1082;&#1072; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#%D0%94%D0%BE%D0%BC%D0%B0%D1%88%D0%BA%D0%B0-">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -13316,7 +13318,7 @@ $$\rho_{\xi,\eta}(x,y) =\left\{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+<h2 id="%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#%D0%93%D1%80%D0%BE%D0%B1%D1%8B-">&#182;</a></h2>
 </div>
 </div>
 </div>
